less: add bootstrap icon path variable

--- a/app/assets/less/admin.less
+++ b/app/assets/less/admin.less
@@ -4,6 +4,7 @@
 @import "navbar";
 
 @fa-font-path: "../vendor/font-awesome/fonts";
+@icon-font-path: "../vendor/bootstrap/fonts/";
 
 body { padding-top: 65px; font-family: "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", "Luxi Sans", sans-serif; }
 
